--- a/lin/Dockerfile
+++ b/lin/Dockerfile
@@ -5,8 +5,7 @@ FROM ubuntu:18.04
 ENV DEBIAN_FRONTEND=noninteractive
 RUN echo "APT::Get::Assume-Yes \"true\";" > /etc/apt/apt.conf.d/90assumeyes
 
-RUN apt-get update \
-&& apt-get install -y --no-install-recommends \
+RUN apt-get update && apt-get install -y --no-install-recommends \
         ca-certificates \
         software-properties-common \
         curl \
@@ -26,6 +25,7 @@ RUN apt-get update \
 
 WORKDIR /tmp
 
+
 # Az CLI
 RUN curl -sL https://packages.microsoft.com/keys/microsoft.asc |     gpg --dearmor |     tee /etc/apt/trusted.gpg.d/microsoft.asc.gpg > /dev/null
 RUN echo "deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli/ $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/azure-cli.list
@@ -36,6 +36,11 @@ RUN curl https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-p
 RUN add-apt-repository universe
 RUN dpkg -i packages-microsoft-prod.deb
 RUN apt-get update && apt-get install -y --no-install-recommends powershell
+
+# Dotnet
+RUN apt-get update && apt-get install -y --no-install-recommends dotnet-sdk-3.1
+RUN dotnet tool install --global dotnet-ef
+ENV PATH="/root/.dotnet/tools:${PATH}"
 
 # Chromium
 RUN apt-get update && apt-get install -y --no-install-recommends chromium-browser
@@ -68,6 +73,7 @@ RUN unzip sqlpackage-linux-x64-latest.zip -d /opt/sqlpackage
 RUN chmod a+x /opt/sqlpackage/sqlpackage
 ENV PATH="/opt/sqlpackage:${PATH}"
 ENV SQLPACKAGE=/opt/sqlpackage/sqlpackage
+
 
 # Clean up /tmp
 RUN rm -rf *
