Install mono-devel package.

--- a/lin/Dockerfile
+++ b/lin/Dockerfile
@@ -5,6 +5,11 @@ FROM ubuntu:18.04
 ENV DEBIAN_FRONTEND=noninteractive
 RUN echo "APT::Get::Assume-Yes \"true\";" > /etc/apt/apt.conf.d/90assumeyes
 
+RUN apt-get update
+RUN apt-get install -y --no-install-recommends gnupg ca-certificates
+RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
+RUN echo "deb https://download.mono-project.com/repo/ubuntu stable-bionic main" | tee /etc/apt/sources.list.d/mono-official-stable.list
+
 RUN apt-get update && apt-get install -y --no-install-recommends \
         apt-utils \
         ca-certificates \
@@ -23,6 +28,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         openssl \
         zip \
         unzip \
+        mono-devel \
         && apt-get upgrade \
         && rm -rf /var/lib/apt/lists/*
 
